WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234119
AX: role="button" with aria-pressed is not exposed as a form control
https://bugs.webkit.org/show_bug.cgi?id=234119
Summary
AX: role="button" with aria-pressed is not exposed as a form control
Sepand Parhami
Reported
2021-12-09 18:36:57 PST
Summary: When using an element with `role=“button”` and `aria-pressed`, the element does not correctly show up in VoiceOver’s form controls menu, like regular buttons with aria-pressed or elements with just the role. Steps To Reproduce: 1. Open the attached repro.html in Safari 2. Enable VoiceOver 3. Open web rotor (control + option + u) 4. Navigate to form controls (left or right arrow until it appears) Results: There is only one button in the forms control menu, the plain HTML button. I would expect that the one with the aria role would also show up there.
Attachments
Patch
(7.11 KB, patch)
2021-12-09 19:08 PST
,
Sepand Parhami
no flags
Details
Formatted Diff
Diff
Patch
(7.11 KB, patch)
2021-12-10 10:37 PST
,
Sepand Parhami
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-12-09 18:37:13 PST
<
rdar://problem/86302258
>
Sepand Parhami
Comment 2
2021-12-09 19:08:03 PST
Created
attachment 446654
[details]
Patch
chris fleizach
Comment 3
2021-12-09 22:16:47 PST
Comment on
attachment 446654
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446654&action=review
> Source/WebCore/ChangeLog:11 > + Tests: LayoutTests\accessibility\mac\search-predicate-element-count.html
wrong format for slashes, they should be the other way
> LayoutTests/accessibility/mac/search-predicate-element-count.html:54 > +<!-- The following two are toggle buttons. -->
it doesn't look like this tests the new behavior. toggle buttons have aria_pressed as attributes.
Sepand Parhami
Comment 4
2021-12-10 10:37:41 PST
Created
attachment 446757
[details]
Patch
Sepand Parhami
Comment 5
2021-12-10 10:39:38 PST
Comment on
attachment 446654
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=446654&action=review
>> Source/WebCore/ChangeLog:11 >> + Tests: LayoutTests\accessibility\mac\search-predicate-element-count.html > > wrong format for slashes, they should be the other way
Fixed.
>> LayoutTests/accessibility/mac/search-predicate-element-count.html:54 >> +<!-- The following two are toggle buttons. --> > > it doesn't look like this tests the new behavior. toggle buttons have aria_pressed as attributes.
Oops, fixed.
EWS
Comment 6
2022-01-17 11:51:22 PST
Committed
r288100
(
246114@main
): <
https://commits.webkit.org/246114@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446757
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug